--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +24,16 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
-    "mongoose": "^5.3.16",
-    "if-env": "^1.0.4"
-  }
+    "gh-pages": "^3.2.3",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.3.16"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EricMalpass/Test-React.git"
+  },
+  "bugs": {
+    "url": "https://github.com/EricMalpass/Test-React/issues"
+  },
+  "homepage": "https://github.com/EricMalpass/Test-React#readme"
 }
