--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
   "bugs": {
     "url": "https://github.com/EricMalpass/Test-React/issues"
   },
-  "homepage": "https://github.com/EricMalpass/Test-React#readme"
+  "homepage": "https://github.com/EricMalpass/Test-React"
 }
